# DzTools

./: .gitattributes  CMakeLists.txt  README.md
Tools/CrashHandle/: CrashHandle.h  README.md
Tools/CvMatAndQImage/: CvMatAndQImage.cpp  CvMatAndQImage.h
Tools/DzCamera/: .clang-format  .gitignore  DzCamera.pri  README.md
Tools/DzCamera/DzCamera/: DzCamera
Tools/DzCamera/DzCamera/BaslerCamera/: BaslerCamera.cpp  BaslerCamera.h  BaslerCamera.pri  BaslerEventer.h  BaslerInstance.cpp  BaslerInstance.h
Tools/DzCamera/DzCamera/DahengCamera/: DahengCamera.cpp  DahengCamera.h  DahengCamera.pri  DahengInstance.cpp  DahengInstance.h
Tools/DzCamera/DzCamera/DahengCamera/inc/: GXIAPIBase.h  GXSmartPtr.h  IGXFeatureControl.h  IGXImageFormatConvert.h
Tools/DzCamera/DzCamera/DalsaCamera/: DalsaCamera.cpp  DalsaCamera.h  DalsaCamera.pri  DalsaCameraInstance.cpp  DalsaCameraInstance.h
Tools/DzCamera/DzCamera/HikCamera/: HikCamera.cpp  HikCamera.h  HikCamera.pri  HikInstance.cpp  HikInstance.h
Tools/DzCamera/DzCamera/HuarayCamera/: HuarayCamera.cpp  HuarayCamera.h  HuarayCamera.pri  HuarayInstance.cpp  HuarayInstance.h
Tools/DzCamera/DzCamera/IKapCamera/: IKap.pri  IKapCamera.cpp  IKapCamera.h  IKapCamera.pri  IKapInstance.cpp  IKapInstance.h
Tools/DzCamera/DzCamera/IKapCamera/IKap/Include/: IKapBoard.h  IKapBoardInfoType.h  IKapC.h  IKapCDef.h  IKapCStat.h  IKapCType.h
Tools/DzCamera/DzCamera/MindVisionCamera/: MindVisionCamera.cpp  MindVisionCamera.h  MindVisionCamera.pri  MindVisionCameraInstance.cpp  MindVisionCameraInstance.h  gst417m.h
Tools/DzCamera/DzCamera/MindVisionCamera/Include/: CameraApi.h  CameraApiLoad.h  CameraDefine.H
Tools/DzCamera/DzCamera/Public/: DzCamera.cpp  DzCamera.h  SpeedCamera.cpp  SpeedCamera.h
Tools/DzCamera/DzCamera/Res/: DzCamera.qrc  SpeedCamera.qrc
Tools/DzCamera/DzCamera/Res/translate/: sr_RS.ts  zh_CN.qm  zh_CN.ts
Tools/DzCamera/DzCamera/SentechCamera/: SentechCamera.cpp  SentechCamera.h  SentechCamera.pri  SentechInstance.cpp  SentechInstance.h
Tools/DzCamera/DzCamera/VirtualCamera/: VirtualCamera.cpp  VirtualCamera.h  VirtualCamera.pri
Tools/LogBox/: LogBox.cpp  LogBox.h
Tools/SingleApplication/: singleapplication.h  singleapplication_p.cpp  singleapplication_p.h
Tools/threadSafeDeque/: ThreadSafeDeque.h
proto/: makeProto.bat
